// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer when view type is "guest" matches snapshot 1`] = `
<div
  class="loading-skeleton"
>
  <div>
    <form
      class="checkout-form"
      data-test="checkout-customer-guest"
      id="checkout-customer-guest"
      novalidate=""
    >
      <fieldset
        class="form-fieldset"
      >
        <legend
          class="form-legend is-srOnly"
        >
          Guest Customer
        </legend>
        <div
          class="form-body"
        >
          <div
            class="customerEmail-container"
          >
            <div
              class="customerEmail-body"
            >
              <div
                class="form-field"
              >
                <label
                  class="form-label optimizedCheckout-form-label"
                  for="email"
                  id="email-label"
                >
                  Email
                </label>
                <input
                  autocomplete="email"
                  class="form-input optimizedCheckout-form-input"
                  id="email"
                  name="email"
                  type="email"
                  value="test@bigcommerce.com"
                />
              </div>
              <div
                class="form-field"
              >
                <input
                  class="form-checkbox"
                  data-test="should-subscribe-checkbox"
                  id="shouldSubscribe"
                  name="shouldSubscribe"
                  type="checkbox"
                  value="false"
                />
                <label
                  class="form-label optimizedCheckout-form-label"
                  for="shouldSubscribe"
                >
                  <span>
                    Subscribe to our newsletter.
                  </span>
                </label>
              </div>
            </div>
            <div
              class="form-actions customerEmail-action"
            >
              <button
                class="button customerEmail-button button--primary optimizedCheckout-buttonPrimary"
                data-test="customer-continue-as-guest-button"
                id="checkout-customer-continue"
                type="submit"
              >
                Continue
              </button>
            </div>
          </div>
          <p>
            Already have an account? 
            <a
              data-test="customer-continue-button"
              id="checkout-customer-login"
            >
              Sign in now
            </a>
          </p>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Customer when view type is "login" matches snapshot 1`] = `
<div
  class="loading-skeleton"
>
  <div>
    <form
      class="checkout-form"
      data-test="checkout-customer-returning"
      id="checkout-customer-returning"
      novalidate=""
    >
      <fieldset
        class="form-fieldset"
      >
        <legend
          class="form-legend is-srOnly"
        >
          Returning Customer
        </legend>
        <div
          class="form-body"
        >
          <div
            class="form-field"
          >
            <label
              class="form-label optimizedCheckout-form-label"
              for="email"
              id="email-label"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="form-input optimizedCheckout-form-input"
              id="email"
              name="email"
              type="email"
              value="test@bigcommerce.com"
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-label optimizedCheckout-form-label"
              for="password"
              id="password-label"
            >
              Password
            </label>
            <div
              class="form-field-password"
            >
              <input
                class="form-input optimizedCheckout-form-input form-input--withIcon"
                id="password"
                name="password"
                type="password"
                value=""
              />
              <a
                class="form-toggle-password form-input-icon"
                href="#"
              >
                <div
                  class="icon"
                >
                  <svg
                    viewBox="0 0 640 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
          <p
            class="form-legend-container"
          >
            <span>
              <a
                data-test="forgot-password-link"
                href="https://store-k1drp8k8.bcapp.dev/login.php?action=reset_password"
                rel="noopener noreferrer"
                target="_blank"
              >
                Forgot password?
              </a>
            </span>
            <span>
              <a
                href="#"
              >
                Create an account
              </a>
            </span>
          </p>
          <div
            class="form-actions"
          >
            <button
              class="button button--primary optimizedCheckout-buttonPrimary"
              data-test="customer-continue-button"
              id="checkout-customer-continue"
              type="submit"
            >
              Sign In
            </button>
            <a
              class="button optimizedCheckout-buttonSecondary"
              data-test="customer-cancel-button"
              href="#"
              id="checkout-customer-cancel"
            >
              Cancel
            </a>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;
